# openwrt

package/kernel/ath10k-ct/patches/: 999-ath10k-disable-radar-detection.patch
package/kernel/bcm63xx-cfe/: Makefile
package/kernel/bcm63xx-cferam/: Makefile
package/kernel/linux/modules/: hwmon.mk  other.mk
package/kernel/mac80211/: broadcom.mk
package/kernel/mac80211/patches/brcm/: 816-b43-add-bcm6362-support.patch  816-b43-bcma-rev-22-support.patch  851-brcmsmac-rev-22-support.patch  865-brcmfmac-disable-dump_survey-on-bcm2835.patch
package/kernel/r8101/patches/: 0001-r8101-fix-build-with-kernels-6.16.patch
package/kernel/r8125/: Makefile
package/kernel/r8168/: Makefile
package/multimedia/ffmpeg-omx/: Makefile
package/multimedia/ffmpeg-omx/files/: ffmpeg-omx.mri
package/multimedia/ffmpeg-rpi/: Makefile
package/multimedia/mpv/: Makefile
package/multimedia/mpv/patches/: 001-eglattrib-typedef.patch
package/multimedia/omxplayer/: Makefile
package/multimedia/omxplayer/files/: CMakeLists.txt
package/multimedia/sdl2/: Makefile
package/multimedia/sdl2/patches/: 001-cmake-policy-disable.patch
package/network/services/odhcpd/files/: odhcpd.defaults
package/system/mtd/src/: Makefile
